[package]
name = "guinol-rs"
version = "0.1.0"
authors = ["Yoandy Rodriguez Martinez <yoandy.rmartinez@gmail.com>"]
edition = "2018"
description = "Implementation of the Firefox's Marionette Protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.11.3"
futures-util = { version = "0.3.8", features = ["io"] }
tracing = "0.1.22"
serde = {version ="1.0", features =["derive"]}
serde_json = "1.0"
[dev-dependencies]
smol = "1.2.5"
futures = "0.3.8"
